--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,8 @@ scripts = ["install/setup.sh"]
 
 [tasks]
 build = "colcon build --symlink-install"
+publisher = { cmd = "ros2 run examples_rclpy_minimal_publisher publisher_old_school", env={ RMW_IMPLEMENTATION="rmw_libp2p_cpp" }, depends-on="build" }
+subscriber = { cmd = "ros2 run examples_rclpy_minimal_subscriber subscriber_old_school", env={ RMW_IMPLEMENTATION="rmw_libp2p_cpp" }, depends-on="build" }
 
 [dependencies]
 rust = ">=1.81.0,<2"
@@ -25,6 +27,12 @@ ros-humble-osrf-testing-tools-cpp = ">=1.5.2,<2"
 ros-humble-test-msgs = ">=1.2.1,<2"
 ros-humble-ament-cmake-ros = ">=0.10.0,<0.11"
 ros-humble-ament-cmake = ">=1.3.7,<2"
+
+# minimal examples to test the rmw layer
+ros-humble-examples-rclpy-minimal-publisher = ">=0.15.1,<0.16"
+ros-humble-examples-rclpy-minimal-subscriber = ">=0.15.1,<0.16"
+ros-humble-ros2cli = ">=0.18.8,<0.19"
+ros-humble-ros2run = ">=0.18.8,<0.19"
 
 [build-dependencies]
 colcon-common-extensions = ">=0.3.0,<0.4"
