--- a/rmw_libp2p_cpp/rust/Cargo.toml
+++ b/rmw_libp2p_cpp/rust/Cargo.toml
@@ -10,42 +10,8 @@ cbindgen = "0.24.3"
 
 [dependencies]
 cdr = "0.2.4"
-
-[dependencies.uuid]
-version = "1.1.2"
-features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
-]
-
-[dependencies.deadqueue]
-version = "0.2.4"
-default-features = true
-
-[dependencies.tokio]
-version = "1.25.0"
-features = [
-    "rt-multi-thread",
-]
-
-[dependencies.libp2p]
-version = "0.51"
-features = [
-    "dns",
-    "gossipsub",
-    "kad",
-    "macros",
-    "mdns",
-    "mplex",
-    "noise",
-    "request-response",
-    "rsa",
-    "tcp",
-    "tokio",
-    "websocket",
-    "yamux",
-]
+log = "0.4.21"
+stdext = "0.3.3"
 
 [lib]
-crate-type=["staticlib"]
+crate-type=["cdylib"]
