added support for clients
Signed-off-by: Esteve Fernandez <esteve@apache.org>

--- a/rmw_libp2p_cpp/CMakeLists.txt
+++ b/rmw_libp2p_cpp/CMakeLists.txt
@@ -39,6 +39,7 @@ find_package(rosidl_typesupport_introspection_cpp REQUIRED)
 add_library(rmw_libp2p_cpp
   src/client_service_common.cpp
   src/identifier.cpp
+  src/rmw_client.cpp
   src/rmw_guard_condition.cpp
   src/rmw_get_gid_for_publisher.cpp
   src/rmw_get_implementation_identifier.cpp
