--- a/rmw_libp2p_cpp/CMakeLists.txt
+++ b/rmw_libp2p_cpp/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(rmw_libp2p_cpp
   src/rmw_publish.cpp
   src/rmw_publisher.cpp
   src/rmw_request.cpp
+  src/rmw_response.cpp
   src/rmw_service.cpp
   src/rmw_subscription.cpp
   src/rmw_take.cpp
