--- a/rmw_libp2p_cpp/rust/Cargo.toml
+++ b/rmw_libp2p_cpp/rust/Cargo.toml
@@ -47,5 +47,14 @@ features = [
     "yamux",
 ]
 
+# Include both staticlib for C FFI and rlib for testing
 [lib]
-crate-type=["staticlib"]
+crate-type = ["staticlib", "rlib"]
+
+[dev-dependencies]
+# Test utilities
+tokio-test = "0.4"
+
+[[test]]
+name = "integration_tests"
+path = "tests/integration_tests.rs"
