--- a/rmw_libp2p_cpp/rust/Cargo.toml
+++ b/rmw_libp2p_cpp/rust/Cargo.toml
@@ -47,5 +47,13 @@ features = [
     "yamux",
 ]
 
+[dev-dependencies]
+proptest = "1.4"
+
+[profile.test]
+# Optimize tests for faster execution while keeping debug info
+opt-level = 1
+debug = true
+
 [lib]
 crate-type=["staticlib"]
