fix CMakeLists.txt format
Signed-off-by: Esteve Fernandez <esteve@apache.org>

--- a/rmw_libp2p_cpp/CMakeLists.txt
+++ b/rmw_libp2p_cpp/CMakeLists.txt
@@ -22,13 +22,13 @@ endif()
 
 include(FetchContent)
 
-FetchContent_Declare(
+fetchcontent_declare(
   Corrosion
   GIT_REPOSITORY https://github.com/corrosion-rs/corrosion.git
   GIT_TAG v0.5
 )
 
-FetchContent_MakeAvailable(Corrosion)
+fetchcontent_makeavailable(Corrosion)
 
 find_package(ZLIB REQUIRED)
 
