--- a/rmw_libp2p_cpp/rust/Cargo.toml
+++ b/rmw_libp2p_cpp/rust/Cargo.toml
@@ -10,6 +10,7 @@ cbindgen = "0.24.3"
 
 [dependencies]
 cdr = "0.2.4"
+tracing = "0.1"
 
 [dependencies.uuid]
 version = "1.1.2"
@@ -27,6 +28,8 @@ default-features = true
 version = "1.25.0"
 features = [
     "rt-multi-thread",
+    "signal",
+    "time",
 ]
 
 [dependencies.libp2p]
@@ -49,6 +52,7 @@ features = [
 
 [dev-dependencies]
 proptest = "1.4"
+tracing-subscriber = "0.3"
 
 [profile.test]
 # Optimize tests for faster execution while keeping debug info
